# exoplanet-data-pipeline

./: .gitignore  Makefile  README.md
api-service/: README.md  pom.xml
api-service/src/main/java/com/exoplanetdatapipeline/api/: ApiServiceApplication.java  ServletInitializer.java
api-service/src/test/java/com/exoplanetdatapipeline/api/: ApiServiceApplicationTests.java
data-deletion-service/: README.md
data-ingestion-service/: Makefile  README.md  exoplanet-api.info  go.mod  go.sum
data-ingestion-service/src/cmd/v1/: main.go
data-ingestion-service/src/internal/models/: exoplanet.go
data-ingestion-service/src/internal/operations/: planets.go
data-ingestion-service/src/pkg/api/: exoplanet_archive.go  query_builder.go  subscriptions.go
data-ingestion-service/src/pkg/database/: mongo.go
data-ingestion-service/src/pkg/messaging/: nats.go
data-ingestion-service/src/tests/: exoplanet_arcieve_test.go  models_exoplanet_test.go  query_builder_test.go
data-processing-service/: Makefile  README.md  pyproject.toml
data-processing-service/src/data_processing_service/: __main__.py
data-processing-service/src/databases/: models.py  mongodb.py  sqlite.py
data-processing-service/src/messaging/: __init__.py  client.py  constants.py  models.py
data-processing-service/src/operations/: data.py  processing.py
notification-service/: README.md
